--- a/ProjektChose.html
+++ b/ProjektChose.html
@@ -16,15 +16,14 @@
 
     <div class="container">
         <header>
-            <div class="navbar">
+            <nav>
                 <div class="categories">
                     <a href="" class="decoration">Home</a>
                 </div>
                 <div class="categories">
-                    <a href="" class="decoration">Search</a>
-                    <i class="fa-solid fa-magnifying-glass decoration"></i>
+                    <i class="fa-solid fa-magnifying-glass decoration search"></i>
                 </div>
-            </div>
+            </nav>
             <div class="icon-cart">
                 <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 4h1.5L9 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-8.5-3h9.25L19 7H7.312"/>
@@ -44,7 +43,27 @@
             </div>
         </div>
     </div>
-   
+
+
+    <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="">Vans</a>
+          <a href="">Stüssy</a>
+          <a href="">Bape</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button class="dropbtn">Dropdown</button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="">Red</a>
+          <a href="">Green</a>
+          <a href="">Blue</a>
+        </div>
+    </div>
+
+
 
     <div class="cartTab">
         <h1>Shopping cart</h1>
