--- a/ProjektChose.html
+++ b/ProjektChose.html
@@ -34,35 +34,29 @@
 
         <div class="listProduct">
             <div class="item">
-                <img src="https://images.nexusapp.co/assets/0c/dc/db/274420714.jpg" alt="">
-                <h2>Name Produvt</h4>
-                <div class="price">$200</div>
-                <button class="addCart">
-                    Add To Cart
-                </button>
             </div>
         </div>
     </div>
 
+    <div class="sorter">
+        <div class="dropdown" id="brands">
+            <button id="dropbtn" class="dropbtn">Brands</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
+        </div>
 
-    <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="">Vans</a>
-          <a href="">Stüssy</a>
-          <a href="">Bape</a>
+        <div class="dropdown" id="color">
+            <button id="dropbtn" class="dropbtn">Colors</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
         </div>
     </div>
-
-    <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div id="myDropdown" class="dropdown-content">
-          <a href="">Red</a>
-          <a href="">Green</a>
-          <a href="">Blue</a>
-        </div>
-    </div>
-
 
 
     <div class="cartTab">
