Jag  fixade mina sorter buttons och jag fick lite hjälp med att fixa local storage i min js

--- a/ProjektChose.html
+++ b/ProjektChose.html
@@ -40,20 +40,31 @@
 
     <div class="sorter">
         <div class="dropdown" id="brands">
-            <button id="dropbtn" class="dropbtn">Brands</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+            <button class="dropbtn">Brands</button>
+            <div class="dropdown-content myDropdown">
+                <a href="#">Bape</a>
+                <a href="#">Vans</a>
+                <a href="#">Nike</a>
+                <a href="#">Adidas</a>
             </div>
         </div>
 
         <div class="dropdown" id="color">
-            <button id="dropbtn" class="dropbtn">Colors</button>
-            <div id="myDropdown" class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+            <button class="dropbtn">Colors</button>
+            <div class="dropdown-content myDropdown">
+                <a href="#">Green</a>
+                <a href="#">Blue</a>
+                <a href="#">Black</a>
+                <a href="#">White</a>
+            </div>
+        </div>
+
+        <div class="dropdown" id="size">
+            <button class="dropbtn">Size</button>
+            <div class="dropdown-content myDropdown">
+                <a href="#">S</a>
+                <a href="#">M</a>
+                <a href="#">L</a>
             </div>
         </div>
     </div>
