är nästan klar med buttons,  börjat  med footer

--- a/ProjektChose.html
+++ b/ProjektChose.html
@@ -21,7 +21,10 @@
                     <a href="" class="decoration">Home</a>
                 </div>
                 <div class="categories">
-                    <i class="fa-solid fa-magnifying-glass decoration search"></i>
+                    <a href="" class="decoration">About us</a>
+                </div>
+                <div class="categories">
+                    <a class="fa-solid fa-magnifying-glass decoration search"></a>
                 </div>
             </nav>
             <div class="icon-cart">
@@ -38,49 +41,55 @@
         </div>
     </div>
 
-    <div class="sorter">
-        <div class="dropdown" id="brands">
-            <button class="dropbtn">Brands</button>
-            <div class="dropdown-content myDropdown">
-                <a href="#">Bape</a>
-                <a href="#">Vans</a>
-                <a href="#">Nike</a>
-                <a href="#">Adidas</a>
+    <main>
+        <div id="sorter">
+            <div class="dropdown" id="brands">
+                <button class="dropbtn">Brands</button>
+                <div class="dropdown-content myDropdown">
+                    <a class="dropdown-link" href="#">Bape</a>
+                    <a class="dropdown-link" href="#">Vans</a>
+                    <a class="dropdown-link" href="#">Nike</a>
+                    <a class="dropdown-link" href="#">Adidas</a>
+                </div>
+            </div>
+
+            <div class="dropdown" id="color">
+                <button class="dropbtn">Colors</button>
+                <div class="dropdown-content myDropdown">
+                    <a class="dropdown-link" href="#">Green</a>
+                    <a class="dropdown-link" href="#">Blue</a>
+                    <a class="dropdown-link" href="#">Black</a>
+                    <a class="dropdown-link" href="#">White</a>
+                </div>
+            </div>
+
+            <div class="dropdown" id="size">
+                <button class="dropbtn">Size</button>
+                <div class="dropdown-content myDropdown">
+                    <a class="dropdown-link" href="#">S</a>
+                    <a class="dropdown-link" href="#">M</a>
+                    <a class="dropdown-link" href="#">L</a>
+                </div>
             </div>
         </div>
 
-        <div class="dropdown" id="color">
-            <button class="dropbtn">Colors</button>
-            <div class="dropdown-content myDropdown">
-                <a href="#">Green</a>
-                <a href="#">Blue</a>
-                <a href="#">Black</a>
-                <a href="#">White</a>
+
+        <div class="cartTab">
+            <h1>Shopping cart</h1>
+            <div class="listCart"> 
+            </div>
+            <div class="btn">
+                <button class="close">CLOSE</button>
+                <button class="checkOut">
+                    <a href="ProjektCheckOut.html">CHECK OUT</a>
+                </button> 
             </div>
         </div>
+    </main>
 
-        <div class="dropdown" id="size">
-            <button class="dropbtn">Size</button>
-            <div class="dropdown-content myDropdown">
-                <a href="#">S</a>
-                <a href="#">M</a>
-                <a href="#">L</a>
-            </div>
-        </div>
-    </div>
-
-
-    <div class="cartTab">
-        <h1>Shopping cart</h1>
-        <div class="listCart"> 
-        </div>
-        <div class="btn">
-            <button class="close">CLOSE</button>
-            <button class="checkOut">
-                <a href="ProjektCheckOut.html">CHECK OUT</a>
-            </button> 
-        </div>
-    </div>
+    <footer>
+        <div class="footerDiv">Hello my name is elnor</div>
+    </footer>
 
 
 
