allt möjligt med främst footer vilket borde vara klar

--- a/ProjektChose.html
+++ b/ProjektChose.html
@@ -88,7 +88,54 @@
     </main>
 
     <footer>
-        <div class="footerDiv">Hello my name is elnor</div>
+        <div class="footerDiv">
+            <div class="aboutUs colorFooter"> About Gojira <br>
+                        <a class="styleFooter colorFooter" href="">About us</a> <br>
+                        <a class="styleFooter colorFooter" href="">Career</a> <br>
+                        <a class="styleFooter colorFooter" href="">Climate for us</a><br>
+                        <a class="styleFooter colorFooter" href="">FAQs</a>
+            </div>
+            <div class="legal colorFooter"> Legal <br>
+                <a class="styleFooter colorFooter" href="">Terms</a> <br>
+                <a class="styleFooter colorFooter" href="">Policy</a> <br>
+                <a class="styleFooter colorFooter" href="">Returns Policy</a>
+            </div>
+
+            <div class="choseCurrency"> 
+                <form action="">
+                    <label class="colorFooter currency" for="fcurrency">Change Currency
+                        <select name="fcurrency" id="Currency">Currency 
+                            <option value="Yuan">Yuan, ¥</option>
+                            <option value="Dollar, $">Dollar, $</option>
+                            <option value="Euro, £">Euro, £</option>
+                            <option value="Swedish crown, kr">Swedish crown, kr</option>
+                            <option value="Polish złoty, zloty">Polish złoty, zloty</option>
+                            <option value="Yen, ¥">Yen, ¥</option>
+                        </select>
+                    </label>
+                </form>
+            </div>
+
+            <div class="socialmedias colorFooter"> Contact us <br>
+                <i class="fa-brands fa-square-instagram social">
+                    <a href=""></a>
+                </i>
+                <i class="fa-brands fa-square-facebook social">
+                    <a href=""></a>
+                </i>
+                <i class="fa-brands fa-x-twitter social">
+                    <a href=""></a>
+                </i>
+                <i class="fa-brands fa-square-pinterest social">
+                    <a href=""></a>
+                </i>
+                <div>
+                    <label for="fname">Mail:</label><br>
+                    <input type="text" id="fname" name="fname"><br>
+                    <input type="submit" value="Submit">    
+                </div>
+            </div>
+        </div>
     </footer>
 
 
