--- a/ProjektCheckOut.html
+++ b/ProjektCheckOut.html
@@ -8,19 +8,19 @@
 </head>
 <body>  
     <main>
-        <div class="container">
+        <div class="container checkoutPart">
             <div class="checkoutLayout checkoutHeight">
                 <div class="returnCart">
-                    <a href="ProjektChose.html">Keep Shopping</a>
-                    <h1>List Product in Cart</h1>
+                    <a class="colorFooter" href="ProjektChose.html">Keep Shopping</a>
+                    <h1 class="colorFooter">List Product in Cart</h1>
                     <div class="list">
-                        <div class="item">
+                        <div class="item backgroundItems">
                         </div>
                     </div>
                 </div>
                 
                 <div class="right">
-                    <h1>CHECKOUT</h1>
+                    <h2>CHECKOUT</h2>
                     <div class="form">
                         <div class="group">
                             <label for="">FULL NAME</label>
@@ -38,14 +38,14 @@
                             <label for="">Country</label>
                             <select name="" id="">
                                 <option value="">Choose..</option>
-                                <option value="london">London</option>
+                                <option value="Sweden">Sweden</option>
                             </select>
                         </div>
                         <div class="group">
                             <label for="">City</label>
                             <select name="" id="">
                                 <option value="">Choose..</option>
-                                <option value="london">London</option>
+                                <option value="Stockholm">Stockholm</option>
                             </select>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                       </form>
                 </div>
                 <div class="colorFooter styleFooter moreInfo">
-                    Click here for more information!
+                    Click here for more info!
                 </div>
             </div>
         </div>
